# wargod

./: .gitignore  API.md  README.md  bun.lockb  go.mod  go.sum  index.html  main.go  package.json  vite.config.ts  wails.json
api/: api.go
conf/: conf.go
core/: auth.go  cert.go  client.go  handle.go  process.go
examples/rune/: main.go
examples/terminal/: main.go
examples/token/: main.go
frontend/: bun.lockb  components.d.ts  index.html  package.json  package.json.md5  vite.config.ts
frontend/src/: App.vue  Game.vue  main.ts
frontend/src/components/: Loading.vue  Sidebar.vue
frontend/src/components/game/: Item.vue  Rune.vue  Skill.vue  Spell.vue
frontend/src/types/: game.ts
frontend/src/utils/: storage.ts
frontend/src/views/: Assistant.vue  Career.vue  Opgg.vue  Personal.vue  Record.vue  Setting.vue
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/api/: Api.d.ts  Api.js
game/: champ.go  endpoint.go  flow.go  game.go  lobby.json  rune.go
model/: champion.go  game.go  labby.go  message.go  ranked.go  rune.go  summoner.go
opgg/: champin.go  client.go  client_test.go
schema/: meta.json  spells.json
server/: Cargo.toml  tauri.conf.json
server/examples/: monitor.rs
server/src/: error.rs  handler.rs  lib.rs  main.rs  process.rs  state.rs
src/: main.ts  styles.css
src/components/: sidebar.html  sitebar.ts
src/page/: index.html
types/: notification.go  tier.go
