[package]
name = "wargod"
version = "0.1.0"
description = "A Tauri App"
authors = ["atopx <3940422@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wargod_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

windows = { version = "0.58.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }

base64 = "0.22"
native-tls = "0.2"
futures-util = "0.3"
tokio = "1"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
# serde-single-key-map = "0.1"
derive_more = { version = "0.99", features = ["display"] }
regex = "1.10.6"
once_cell = "1.19.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
